# Isla_persistent_memory

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
isla_memory/: __init__.py  agent.py  config.py  embedding_client.py  llm_client.py  memory_extractor.py  memory_retriever.py  memory_store.py  memory_updater.py  models.py  prompts.py  utils.py
scripts/: demo_chat.py  demo_openai_chat.py  reset_memory_db.py  run_longmemeval.py  run_longmemeval_memory.py
tests/: test_agent_e2e.py  test_embedding_client.py  test_longmemeval_memory.py  test_memory_extractor.py  test_memory_retriever.py  test_memory_store.py  test_memory_updater.py
