[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isla-persistent-memory"
version = "0.1.0"
description = "A small, runnable long-term memory system inspired by mem0."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["isla_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
